k8s/production/template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gau-${ENV}-env
  labels:
    app: gau-platform
    env: ${ENV}
---
