k8s/production/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: chilley-${DEPLOY_ENV}-env
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      imagePullSecrets:
        - name: ${DOCKER_SECRET}
      containers:
        - name: account-service-api
          image: ${IMAGE}
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          ports:
            - containerPort: 20230
          command: ["/app/entrypoint.sh", "api"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "2"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-pgpool
  namespace: chilley-${DEPLOY_ENV}-env
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgpool
  template:
    metadata:
      labels:
        app: pgpool
    spec:
      imagePullSecrets:
        - name: ${DOCKER_SECRET}
      containers:
        - name: pgpool
          image: bitnami/pgpool:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-memcache
  namespace: chilley-${DEPLOY_ENV}-env
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service-memcache
  template:
    metadata:
      labels:
        app: account-service-memcache
    spec:
      imagePullSecrets:
        - name: ${DOCKER_SECRET}
      containers:
        - name: memcache
          image: memcached:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 11211
          command: ["memcached", "-m", "64", "-c", "1024", "-v"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"

---
