k8s/production/template/ingress-backend.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: gau-backend-ingress
  namespace: gau-{ENV}-env
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: gau-platform
    env: production
spec:
  ingressClassName: nginx
  rules:
    - host: {INGRESS_HOST}
      http:
        paths:
          - path: /api/account
            pathType: Prefix
            backend:
              service:
                name: gau-account-service
                port:
                  number: 8888

          - path: /api/mailing
            pathType: Prefix
            backend:
              service:
                name: gau-mailing-service
                port:
                  number: 8888

          - path: /api/gauflix
            pathType: Prefix
            backend:
              service:
                name: gau-phim-backend
                port:
                  number: 8888

          - path: /api/gautruyen
            pathType: Prefix
            backend:
              service:
                name: gau-truyen-backend
                port:
                  number: 8888

          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: gau-ai-assistant-service
                port:
                  number: 8888
