k8s/production/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daudoo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: gauflix.daudoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gau-phim-frontend
                port:
                  number: 3000

    - host: gautruyen.daudoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gau-truyen-frontend
                port:
                  number: 3000

    - host: daudoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaublog-vercel-proxy
                port:
                  number: 80

    - host: api.daudoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80

    - host: docstodo.daudoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apidog-proxy
                port:
                  number: 80

    - host: rabbitmq.daudoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
